tests/snapshots/structure__package_bin__pass__package_multi_target.snap
---
source: tests/structure.rs
expression: output
---
CMD:
structure
--package
package_multi_target
--bin
package_multi_target

STDERR:

STDOUT:

crate package_multi_target
└── fn main: pub(crate)
